# Probability-education

./: .gitignore  CLAUDE.md  Dockerfile 2  PROJECT_CATALOG 2.md  PROJECT_RECONSTRUCTION_SPEC.md  README.md  agent-tasks.json  index.html  package-lock.json  package.json  playwright.config.js  setup-gcp-creds.sh  startup.sh  vite.config.js
app/: .gitignore  (+3 more)
marimo/: index.py  pyproject.toml
marimo/01_foundations/: 01_sigma_algebra.py  02_measure_random_vars.py  03_lebesgue_riemann.py  04_cantor_set.py
marimo/02_convergence/: 01_convergence_modes.py  02_borel_cantelli.py  03_lln_lab.py  04_clt_studio.py
marimo/03_characteristic_functions/: 01_characteristic_functions.py  02_convolution_cfs.py
marimo/04_expectation/: 01_conditional_expectation.py  02_martingale_explorer.py
marimo/05_brownian_motion/: 01_donsker.py  02_brownian_properties.py
marimo/06_markov_chains/: 01_markov_dashboard.py  02_ergodic_mixing.py
marimo/07_stochastic_calculus/: 01_ito_integral.py  02_sde_solver.py
marimo/08_bayesian/: 01_prior_posterior.py  02_mcmc_explorer.py
marimo/09_information_theory/: 01_entropy_kl.py  02_mutual_information.py
marimo/10_abm/: 01_agent_simulation.py  02_predator_prey.py
marimo/11_financial_math/: 01_stochastic_finance.py
marimo/12_medical_quality/: 01_spc_control_chart.py  02_funnel_plot.py  03_cusum_chart.py  04_pareto_chart.py  05_diagnostic_testing.py  06_meta_analysis.py  07_clinical_statistics.py  08_disease_modeling.py  09_ebm_integration.py  10_vaccine_preventable.py
marimo/shared/: __init__.py  distributions.py  math_utils.py  plotting.py
(+417 files in other folders)
