[project]
name = "probability-education-marimo"
version = "1.0.0"
description = "Interactive Probability Education — Marimo Notebook Edition"
requires-python = ">=3.10"
dependencies = [
    "marimo>=0.13.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
