[package]
name = "epi-model"
version = "0.1.0"
edition = "2021"
description = "SEIR/SEIRD compartmental epidemic model compiled to WebAssembly for rural healthcare epidemiology"
license = "MIT"
repository = "https://github.com/your-repo/epi-model"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dev-dependencies]
approx = "0.5"
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
